--- a/resources/bahmni-proxy.conf
+++ b/resources/bahmni-proxy.conf
@@ -73,8 +73,15 @@ ProxyPass /metabase http://metabase:3000
 ProxyPassReverse /metabase http://metabase:3000
 
 #Grafana
-ProxyPass /grafana ws://grafana:3000
-ProxyPassReverse /grafana ws://grafana:3000
+ProxyPass /grafana ws://grafana:3000/grafana
+ProxyPassReverse /grafana ws://grafana:3000/grafana
+RewriteEngine on
+RewriteCond %{REQUEST_URI} ^/grafana/api/live/*
+RewriteCond %{HTTP:Upgrade} websocket [NC]
+RewriteCond %{HTTP:Connection} upgrade [NC]
+Header set Content-Security-Policy upgrade-insecure-requests
+RewriteRule ^/?(.*) "ws://grafana:3000/$1" [P,L]
+
 
 #SMS Service
 ProxyPass /sms-service http://sms-service:8080
