--- a/resources/bahmni-proxy.conf
+++ b/resources/bahmni-proxy.conf
@@ -75,12 +75,6 @@ ProxyPassReverse /metabase http://metabase:3000
 #Grafana
 ProxyPass /grafana ws://grafana:3000/grafana
 ProxyPassReverse /grafana ws://grafana:3000/grafana
-RewriteEngine on
-RewriteCond %{REQUEST_URI} ^/grafana/api/live/*
-RewriteCond %{HTTP:Upgrade} websocket [NC]
-RewriteCond %{HTTP:Connection} upgrade [NC]
-Header set Content-Security-Policy upgrade-insecure-requests
-RewriteRule ^/?(.*) "ws://grafana:3000/$1" [P,L]
 
 
 #SMS Service
@@ -164,6 +158,13 @@ Listen 443
     SSLEngine on
     SSLCertificateFile "/etc/tls/cert.pem"
     SSLCertificateKeyFile "/etc/tls/key.pem"
+
+    RewriteEngine on
+    RewriteCond %{REQUEST_URI} ^/grafana/api/*
+    RewriteCond %{HTTP:Upgrade} websocket [NC]
+    RewriteCond %{HTTP:Connection} upgrade [NC]
+    Header set Content-Security-Policy upgrade-insecure-requests
+    RewriteRule ^/?(.*) "ws://grafana:3000/$1" [P,L]
 
     RewriteEngine on
     RewriteCond %{HTTP:Upgrade} websocket [NC]
