BAH-4095 | Refactor. Proxy pass rules to restrict access on bahmni_config path

--- a/resources/bahmni-proxy.conf
+++ b/resources/bahmni-proxy.conf
@@ -45,8 +45,11 @@ Header set X-Robots-Tag "noindex, nofollow"
 ProxyPass /person-management http://bahmni-web:8091/person-management
 ProxyPassReverse /person-management http://bahmni-web:8091/person-management
 
-ProxyPass /bahmni_config http://bahmni-web:8091/bahmni_config
-ProxyPassReverse /bahmni_config http://bahmni-web:8091/bahmni_config
+ProxyPass /bahmni_config/openmrs/apps http://bahmni-web:8091/bahmni_config/openmrs/apps
+ProxyPassReverse /bahmni_config/openmrs/apps http://bahmni-web:8091/bahmni_config/openmrs/apps
+
+ProxyPass /bahmni_config/openmrs/i18n http://bahmni-web:8091/bahmni_config/openmrs/i18n
+ProxyPassReverse /bahmni_config/openmrs/i18n http://bahmni-web:8091/bahmni_config/openmrs/i18n
 
 #Implementer Interface
 ProxyPass /implementer-interface http://implementer-interface/implementer-interface
